# bdc-sec-parser

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  layout_mapping.yml  task.yml
benchmarks/: gold_set_phase1_template.csv
configs/: universe.yml
docs/: ACCURACY_PLAYBOOK.md  BENCHMARK.md  TICKETING.md  TICKETS_BACKLOG.md
scripts/: build_mapping_worksheet.py  finalize_gold_from_workfile.py  new_accuracy_evidence.sh  package_independent_handoff.sh  prepare_gold_workfile.py  run_accuracy_evidence.sh  score_gold_set.py
src/bdc_sched/: cli.py  config.py
src/bdc_sched/io/: export_csv.py  manifests.py
src/bdc_sched/normalize/: __init__.py  investments.py
src/bdc_sched/parse/: __init__.py  detect.py  schedule.py
src/bdc_sched/qa/: __init__.py  report.py
src/bdc_sched/schema/: __init__.py  contracts.py
src/bdc_sched/sec/: __init__.py  filings.py  submissions.py
src/bdc_sec_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_normalize.py  test_parse.py  test_schema_contracts.py  test_smoke.py
tests/fixtures/: sample_filing.html  schedule_merged_headers.html  schedule_sparse_numeric_rows.html  schedule_with_footnotes.html
