[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdc-sec-parser"
version = "0.1.0"
description = "Download SEC 10-Q/10-K filings for BDCs and parse Schedule of Investments tables"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.0"
]

[project.scripts]
bdc-sched = "bdc_sched.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
